tests/baselines/reference/jsFileCompilationNonNullAssertion.errors.txt
/src/a.js(1,1): error TS8013: Non-null assertions can only be used in TypeScript files.


==== /src/a.js (1 errors) ====
    0!
    ~~
!!! error TS8013: Non-null assertions can only be used in TypeScript files.
    